# hephaestus

./: .gitignore  MODULE.bazel
bazel/: hephaestus.bzl  repositories.bzl
modules/bag/: BUILD
modules/cli/: BUILD
modules/concurrency/: BUILD
modules/containers/: BUILD
modules/examples/: BUILD
modules/examples/proto/: BUILD
modules/ipc/: BUILD
modules/ipc/proto/: BUILD
modules/random/: BUILD
modules/serdes/: BUILD
modules/telemetry/telemetry/: BUILD
modules/telemetry/telemetry/src/: metric_sink.cpp
modules/types/: BUILD
modules/types_proto/: BUILD
modules/types_proto/proto/: BUILD
modules/utils/: BUILD
